@@ -148,6 +148,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable.rpt">Markers that have not been full coded and that have full codeable papers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable2.rpt">Papers containing genes that are not in the full coded portion of the database</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_EarlyPapers.rpt">Early paper for popular genes</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_EarlyEmbPapers.rpt">Early Embryonic Expression Papers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable3.rpt">Blot-only papers that have not been full coded</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_OneGenePapers.rpt">One gene papers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeGene.sql.rpt">Full Coded References that contain indexed Genes that have not been full coded</A>
