@@ -1,3 +1,11 @@
+TAG: qcreports_db-4-1-2-3
+DATE: 10/21/2008
+STAFF: lec
+CHANGES:
+1) TR9313/Early Embryonic Expression Papers/GXD_EarlyEmbPapers.py
+2) TR9322/Transgenic alleles/GXD_Transgenic.py
+3) TR 9336/modernizing paper selection/GXD_FullCodeable.py
+
 TAG: qcreports_db-4-1-2-2
 DATE: 10/06/2008
 STAFF: dbm
